# dune_plot_style

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conda.yml  guidelines.md  requirements.txt  setup.cfg  setup.sh
.github/: CODEOWNERS
.github/workflows/: main.yml  matplotlib.yml  root.yml
cmake/templates/: DUNEPlotStyleConfig.cmake.in
examples/matplotlib/: example.py  plotting_helpers.py
examples/root/cpp/: example.C
examples/root/matplotlib/: example.py
examples/root/python/: example.py
matplotlib/python/: dunestyle.py
matplotlib/stylelib/: dune.mplstyle
root/cpp/include/: DUNEStyle.h
root/python/: dunestyle.py
src/: __init__.py
src/dunestyle/: __init__.py  matplotlib.py
src/dunestyle/stylelib/: dune.mplstyle
src/matplotlib/: __init__.py
src/matplotlib/python/: __init__.py  dunestyle.py
src/matplotlib/stylelib/: dune.mplstyle
src/root/cpp/include/: DUNEStyle.h
src/root/python/: __init__.py  dunestyle.py
ups/: dune-plot-style.table  dune_plot_style.table  make_dune-plot-style_ups_product.sh  make_dune_plot_style_ups_product.sh
