[metadata]
name = dune-plot-style
version = 0.0.1
author = Young Dune
author_email = dune-young@fnal.gov
description = Plot styling tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DUNE/dune-plot-style
project_urls =
bug tracker = https://github.com/DUNE/dune-plot-style/issues
classifiers =
programming language :: Python :: 3
operating system :: OS Independent

[options]
python_requires = >=3.6
install_requires =
package_dir=
    dunestyle = src
    dunestyle.matplotlib = src/matplotlib/python
    dunestyle.root = src/root/python
    dunestyle.data = src/root/cpp/include
    dunestyle.stylelib = src/matplotlib/stylelib
packages =
    dunestyle
    dunestyle.matplotlib
    dunestyle.root
    dunestyle.data
    dunestyle.stylelib

[options.package_data]
dunestyle.data =
    *.h
dunestyle.stylelib =
    *.mplstyle


#[options.packages.find]
#where=src
