[metadata]
name = dune_plot_style
version = 1.02
author = DUNE Authorship and Publications Board (APB)
author_email = dune-apb@fnal.gov
description = Plot styling tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DUNE/dune_plot_style
project_urls =
bug_tracker = https://github.com/DUNE/dune_plot_style/issues
classifiers =
programming language :: Python :: 3
operating system :: OS Independent

[options]
python_requires = >=3.9
install_requires =
package_dir=
    = src
packages =
    dunestyle
    dunestyle.data
    dunestyle.stylelib

[options.package_data]
dunestyle.data =
    *.h
dunestyle.stylelib =
    *.mplstyle
